k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: qbitorrent
  labels:
    app.kubernetes.io/name: qbitorrent
    shared-gateway-access: "true"
